managed/apps/tw/components/website/overlays/beta/patches/ingress-website.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: website
  namespace: tw
spec:
  tls:
  - hosts:
    - beta.twister.american-broomstick.com
    secretName: website-tls
  rules:
  - host: beta.twister.american-broomstick.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-static-webserver
              port:
                number: 80
